--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,6 +5,8 @@
 
     <com.handmark.pulltorefresh.AutoPullToRefreshListView
             android:id="@+id/home_list"
+            android:paddingBottom="@dimen/px100"
+            android:scrollbars="none"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
