主页界面完善

--- a/app/src/main/res/layout/layout_live_block.xml
+++ b/app/src/main/res/layout/layout_live_block.xml
@@ -7,7 +7,5 @@
     <com.benyuan.xiaojs.ui.widget.HorizontalListView
             android:id="@+id/live_block_list"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="@dimen/px30"
-            android:layout_marginRight="@dimen/px30"/>
+            android:layout_height="match_parent"/>
 </LinearLayout>
