--- a/app/src/main/res/layout/layout_live_block_item.xml
+++ b/app/src/main/res/layout/layout_live_block_item.xml
@@ -1,21 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="horizontal"
-              android:background="@color/white"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
-
-    <View
-            android:id="@+id/live_block_left_blank"
-            android:layout_width="@dimen/px10"
-            android:layout_height="match_parent"/>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             android:background="@color/white"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent">
 
     <LinearLayout
             android:orientation="vertical"
+            android:layout_marginRight="@dimen/px15"
+            android:layout_marginLeft="@dimen/px15"
             android:layout_width="@dimen/px260"
             android:layout_height="wrap_content">
 
         <LinearLayout
+                android:layout_marginTop="@dimen/px15"
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -46,6 +43,7 @@
                 android:id="@+id/live_block_title"
                 android:textSize="@dimen/font_26px"
                 android:textColor="@color/font_black"
+                android:layout_marginTop="@dimen/px15"
                 android:maxLines="2"
                 android:textStyle="bold"
                 android:ellipsize="end"
@@ -55,13 +53,12 @@
         <TextView
                 android:id="@+id/live_block_stu_num"
                 android:textSize="@dimen/font_22px"
+                android:layout_marginTop="@dimen/px20"
                 android:textColor="@color/common_text"
+                android:maxLines="1"
+                android:ellipsize="end"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
     </LinearLayout>
 
-    <View
-            android:id="@+id/live_block_right_blank"
-            android:layout_width="@dimen/px10"
-            android:layout_height="match_parent"/>
-</LinearLayout>
+</FrameLayout>
