--- a/app/src/main/res/layout/layout_base_header.xml
+++ b/app/src/main/res/layout/layout_base_header.xml
@@ -17,6 +17,7 @@
             android:id="@+id/left_image"
             android:layout_gravity="left|center_vertical"
             android:layout_marginLeft="@dimen/px30"
+            android:src="@drawable/back_arrow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
