--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -11,6 +11,12 @@
         <item>相机拍摄</item>
         <item>取消</item>
     </string-array>
+    <string-array name="selects_pic_d">
+        <item>相册选取</item>
+        <item>相机拍摄</item>
+        <item>删除</item>
+        <item>取消</item>
+    </string-array>
     <string-array name="selects_pic_pd">
         <item>预览</item>
         <item>相册选取</item>
