--- a/app/src/main/res/layout/activity_sit_in_on.xml
+++ b/app/src/main/res/layout/activity_sit_in_on.xml
@@ -12,7 +12,7 @@
     <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/sit_in_on_allowed"
+            android:text="@string/audit_allowed"
             android:background="@color/white"
             android:textSize="@dimen/font_28px"
             android:textColor="@color/font_gray"
@@ -45,7 +45,7 @@
                     android:paddingBottom="@dimen/px28"
                     android:textColor="@color/font_black"
                     android:textSize="@dimen/font_28px"
-                    android:text="@string/sit_in_on_visible_to_stu"/>
+                    android:text="@string/audit_visible_to_stu"/>
 
             <ToggleButton
                     android:id="@+id/visible_to_stu"
@@ -76,7 +76,7 @@
                     android:paddingBottom="@dimen/px28"
                     android:textColor="@color/font_black"
                     android:textSize="@dimen/font_28px"
-                    android:text="@string/sit_in_on_person"/>
+                    android:text="@string/audit_people"/>
 
             <TextView
                     android:id="@+id/sit_in_on_person"
