--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -66,4 +66,8 @@
         <item>免费</item>
         <item>付费</item>
     </string-array>
+    <string-array name="lesson_pay_methods">
+        <item>支付宝</item>
+        <item>微信</item>
+    </string-array>
 </resources>
